@@ -1,3 +1,7 @@
+=== Deluge 1.2.0_rc6 (In Development) ===
+==== GtkUI ====
+	* Fix #1104, #735 use path.utf-8 if available
+
 === Deluge 1.2.0_rc5 (17 December 2009) ===
 ==== Web ====
 	* Swap order of buttons in Remove window (Closes #1083)
